--- a/catalog.html
+++ b/catalog.html
@@ -52,15 +52,15 @@
 								<legend>Сетка:</legend>
 								<ul>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-radio" type="radio" name="net-type" value="adaptive-net" id="filter-adaptive-net" checked>
+										<input class="filter-input filter-input-radio" type="radio" name="net-type" value="adaptive-net" id="filter-adaptive-net" checked>
 										<label class="label-net" for="filter-adaptive-net">Адаптивная</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-radio" type="radio" name="net-type" value="fixed" id="filter-fixed-net">
+										<input class="filter-input filter-input-radio" type="radio" name="net-type" value="fixed" id="filter-fixed-net" disabled>
 										<label class="label-net" for="filter-fixed-net">Фиксированная</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-radio" type="radio" name="net-type" value="rubber" id="filter-rubber-net">
+										<input class="filter-input filter-input-radio" type="radio" name="net-type" value="rubber" id="filter-rubber-net">
 										<label class="label-net" for="filter-rubber-net">Резиновая</label>
 									</li>
 								</ul>
@@ -69,23 +69,23 @@
 								<legend>Особенности:</legend>
 								<ul>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
+										<input class="filter-input filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
 										<label class="label-particular" for="filter-slider">Слайдер</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="advantages" id="filter-advantages">
+										<input class="filter-input filter-input-checkbox" type="checkbox" name="advantages" id="filter-advantages" disabled>
 										<label class="label-particular" for="filter-advantages">Блок преимуществ</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
-										<label class="label-particular" for="filter-news">Новости</label>
+										<input class="filter-input filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
+										<label class="label-particular" for="filter-news" >Новости</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
+										<input class="filter-input filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
 										<label class="label-particular" for="filter-gallery">Галерея</label>
 									</li>
 									<li class="filter-option">
-										<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="busket" id="filter-busket">
+										<input class="filter-input filter-input-checkbox" type="checkbox" name="busket" id="filter-busket">
 										<label class="label-particular" for="filter-busket">Корзина</label>
 									</li>
 								</ul>
@@ -99,30 +99,30 @@
 						<form>
 							<fieldset class="fieldset">
 								<div class="fieldset-sort-columns">
-									<legend>Сортировать:</legend>
+									<p>Сортировать:</p>
 									<div class="sort-columns">
 										<ul class="sort-list">
 											<li class="sort-item">
 												<input class="sort-input-radio" type="radio" id="price" name="sort-list" checked>
-												<label class="sort-label" for="price" >По цене</lebel>
+												<label class="sort-label" for="price">По цене</label>		
 											</li>
 											<li class="sort-item">
 												<input class="sort-input-radio" type="radio" id="type" name="sort-list">
-												<label class="sort-label" for="type" >По типу</lebel>
+												<label class="sort-label" for="type">По типу</label>	
 											</li>
 											<li class="sort-item">
 												<input class="sort-input-radio" type="radio" id="name" name="sort-list">
-												<label class="sort-label" for="name" >По названию</lebel>
+												<label class="sort-label" for="name">По названию</label>	
 											</li>
 										</ul>
 										<ul class="order-list">
 											<li class="order-item">
 												<input class="order-input-radio" type="radio" id="decrease"  value="decrease" name="order-list" checked>
-												<label class="order-label" for="decrease">По убыванию</label>
+												<label class="order-label" for="decrease">Упорядочить по убыванию</label>
 											</li>
 											<li class="order-item">
 												<input class="order-input-radio" type="radio" id="increase" value="increase" name="order-list">
-												<label class="order-label" for="increase">По возрастанию</label>
+												<label class="order-label" for="increase">Упорядочить по возрастанию</label>
 											</li>
 										</ul>
 									</div>
@@ -131,9 +131,9 @@
 						</form>
 					
 						<ul class="catalog-list">
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">Sedona</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 									<div class="decor"></div>
 									<img src="img/sedona.jpg" width="360" height="576" alt="Внешний вид сайта Sedona">
 								</a>
@@ -143,12 +143,12 @@
 										<dd>Информационный сайт 
 										для туристов</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">Pink</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 								<div class="decor"></div>
 									<img src="img/pink.jpg" width="360" height="576" alt="Внешний вид сайта Pink">
 								</a>
@@ -158,12 +158,12 @@
 										<dd>Продуктовый лендинг 
 										приложения для iOS и Android</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">Barbershop &laquo;Borodinski&raquo;</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 								<div class="decor"></div>
 									<img src="img/barbershop.jpg" width="360" height="576" alt="Внешний вид сайта Barbershop &laquo;Borodinski&raquo;">
 								</a>
@@ -173,12 +173,12 @@
 										<dd>Сайт салона красоты. 
 										Для мужчин, да.</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">Mishka</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 								<div class="decor"></div>
 									<img src="img/mishka.jpg" width="360" height="576" alt="Внешний вид сайта Mishka">
 								</a>
@@ -188,12 +188,12 @@
 										<dd>Интернет-магазин 
 										вязаных игрушек</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">UA+</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 								<div class="decor"></div>
 									<img src="img/aplus.jpg" width="360" height="576" alt="Внешний вид сайта UA+">
 								</a>
@@ -203,12 +203,12 @@
 										<dd>Лендинг курсов повышения 
 										квалификации</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item" tabindex="0">
 								<h3 class="visually-hidden">Кваст</h3>
-								<a class="picture" href="#">
+								<a class="picture" href="#" tabindex="-1">
 								<div class="decor"></div>
 									<img src="img/kvast.jpg" width="360" height="576" alt="Внешний вид сайта Кваст">
 								</a>
@@ -218,13 +218,13 @@
 										<dd>Промо-сайт производителя 
 										крафтового кваса</dd>
 									</dl>
-									<a class="btn btn-order" href="#">9 900 руб.</a>
+									<a class="btn btn-order" href="#" tabindex="-1">9 900 руб.</a>
 								</div>
 							</li>
 						</ul>
 						<div class="pagination-columns">
 							<ul class="pagination-list">
-								<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+								<li class="pagination-item pagination-item-current"><a>1</a></li>
 								<li class="pagination-item"><a href="#">2</a></li>
 								<li class="pagination-item"><a href="#">3</a></li>
 							</ul>
@@ -235,8 +235,9 @@
 			</div>
 		</main>
 		<footer class="main-footer">
-			<section class="footer-contacts-block">
+			<section class="footer-contacts-block relative">
 				<h2 class="visually-hidden">Контактная информация</h2>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.207572333082!2d30.318664667268553!3d59.93871649990846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1532710864989" width="1440" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
 				<div class="map">
 					<img src="img/map.jpg" width="1440" height="416" alt="Наш адрес на карте">
 				</div>
@@ -248,7 +249,7 @@
 							ул. Б. Конюшенная, д. 19/8</span>
 							
 							<span class="phone">тел. +7(812)275-75-75</span>
-							<a class="btn contacts-btn">Напишите нам</a>
+							<a class="btn contacts-btn" tabindex="0">Напишите нам</a>
 						</p>
 					</div>
 				</div>
@@ -263,7 +264,7 @@
 						<ul class="social-btn-list">
 							<li>
 								<a class="btn social-btn" href="#">
-									<svg x="0px" y="0px" width="26px" height="15px" viewBox="0 0 26 15" enable-background="new 0 0 26 15" xml:space="preserve">
+									<svg x="0" y="0" width="26" height="15" viewBox="0 0 26 15" enable-background="new 0 0 26 15" xml:space="preserve">
 										<path fill="#FFFFFF" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
 											c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
 											c1.597-2.153,2.236-3.468,2.036-4.028c-0.192-0.539-1.365-0.399-1.365-0.399L20.69,0.713c-0.381,0.001-0.704,0.119-0.851,0.515
@@ -280,14 +281,14 @@
 							</li>
 							<li>
 								<a class="btn social-btn" href="#">
-									<svg x="0px" y="0px" width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22">
+									<svg x="0" y="0" width="12" height="22" viewBox="0 0 12 22" enable-background="new 0 0 12 22">
 										<path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
 									</svg>Фейсбук
 								</a>
 							</li>
 							<li>
 								<a class="btn social-btn" href="#">
-									<svg x="0px" y="0px" width="21px" height="21px" viewBox="0 0 21 21" enable-background="new 0 0 21 21" xml:space="preserve">
+									<svg x="0" y="0" width="21" height="21" viewBox="0 0 21 21" enable-background="new 0 0 21 21" xml:space="preserve">
 									<path fill="#FFFFFF" d="M18,0H3C1.35,0,0,1.35,0,3v15c0,1.65,1.35,3,3,3h15c1.65,0,3-1.35,3-3V3C21,1.35,19.65,0,18,0z M10.5,7
 										c1.93,0,3.5,1.57,3.5,3.5S12.43,14,10.5,14S7,12.43,7,10.5S8.57,7,10.5,7z M18,18H3V9h1.181C4.067,9.482,4,9.983,4,10.5
 										c0,3.59,2.91,6.5,6.5,6.5s6.5-2.91,6.5-6.5c0-0.517-0.066-1.018-0.181-1.5H18V18z M18,7h-4V3h4V7z"/>
@@ -300,27 +301,31 @@
 				</div>
 			</div>
 		</footer>
-		<section class="modal modal-feedback">
-			<h2 class="visually-hidden">Обратная связь</h2>
-			<p>Напишите нам</p>
-			<form class="feedback-form" action="echo.htmlacademy.ru" method="post">
-				<p>
-					<label class="label user-name-label" for="user-name">Ваше имя:</label>
-					<input class="user-name-input" type="text" id="user-name" name="user-name" placeholder="Представьтесь, пожалуйста">
-				</p>
-				<p>
-					<label class="label user-email-label" for="user-email">Ваш e-mail:</label>
-					<input class="user-email-input" type="email" id="user-email" name="user-email" placeholder="Для отправки ответа"></input>
-				</p>
-				<p>
-					<label class="label email-text-label" for="email-text">Текст письма:</label>
-					<textarea></textarea>
-				</p>
-					<button class="button" type="submit">Отправить</button>
-			</form>
-			<button class="modal-close" type="button">Закрыть</button>
-		</section>
+		<div class="container relative">
+			<section class="modal modal-feedback">
+				<h2 class="visually-hidden">Обратная связь</h2>
+				<p>Напишите нам</p>
+				<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+					<p class="user-name">
+						<label class="label user-name-label" for="user-name">Ваше имя:</label>
+						<input class="input user-name-input" type="text" id="user-name" name="user-name" placeholder="Представьтесь, пожалуйста">
+					</p>
+					<p class="user-email">
+						<label class="label user-email-label" for="user-email">Ваш e-mail:</label>
+						<input class="input user-email-input" type="email" id="user-email" name="user-email" placeholder="Для отправки ответа">
+					</p>
+					<p class="email-text-p">
+						<label class="label email-text-label" for="email-text">Текст письма:</label>
+						<textarea class="textarea" id="email-text" rows="5" placeholder="В свободной форме"></textarea>
+					</p>
+						<button class="btn feedback-btn" type="submit">Отправить</button>
+				</form>
+				<button class="modal-close" type="button">Закрыть</button>
+			</section>
+		</div>
 		
+		<script src="js/popup.js">
+		</script>
 	</body>
 
 </html>
