--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Дизайн-студия Nёrd's</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style-mini.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -237,7 +237,7 @@
 			</section>
 		</div>
 		
-		<script src="js/popup.js">
+		<script src="js/popup-mini.js">
 		</script>
 	</body>
 </html>
