--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				<div class="container">
 					<h2 class="visually-hidden">Преимущества</h2>
 					
-					<input class="visually-hidden slider-input-radio" type="radio" id="slide-1" name="slider" checked>
-					<input class="visually-hidden slider-input-radio" type="radio" id="slide-2" name="slider">
-					<input class="visually-hidden slider-input-radio" type="radio" id="slide-3" name="slider">
+					<input class="slider-input-radio" type="radio" id="slide-1" name="slider" checked>
+					<input class="slider-input-radio" type="radio" id="slide-2" name="slider">
+					<input class="slider-input-radio" type="radio" id="slide-3" name="slider">
 					
 					<ul class="features-list">
 						<li class="feature-item">
